--- a/nvhpc_gpu/drhook.prof.1
+++ b/nvhpc_gpu/drhook.prof.1
@@ -1,48 +1,53 @@
 Profiling information for program='/home/gmap/mrpm/penigaudn/spcm_simple_kernel/nvhpc_gpu/./spcm.x', proc#1:
-	No. of instrumented routines called : 35
-	Instrumentation started : 20230302 151829
-	Instrumentation   ended : 20230302 152632
+	No. of instrumented routines called : 40
+	Instrumentation started : 20230303 154636
+	Instrumentation   ended : 20230303 155411
 	Instrumentation overhead: 0.00%
-	Memory usage : 28439 MB (heap), 11154 MB (rss), 0 MB (stack), 34604 MB (vmpeak), 0 (paging)
-	Wall-time is 241.49 sec on proc#1 (1 procs, 1 threads)
-	Thread#1:      241.49 sec (100.00%) -- Cycles: 543368347537 (1087192885747)
+	Memory usage : 28391 MB (heap), 11110 MB (rss), 0 MB (stack), 34556 MB (vmpeak), 0 (paging)
+	Wall-time is 233.13 sec on proc#1 (1 procs, 1 threads)
+	Thread#1:      233.13 sec (100.00%) -- Cycles: 524556468385 (1024667140748)
 
     #  % Time         Cumul         Self        Total     # of calls        Self       Total    Routine@<thread-id>
                                                                              (Size; Size/sec; Size/call; MinSize; MaxSize)
         (self)        (sec)        (sec)        (sec)                    ms/call     ms/call
 
-    1    77.41      186.930      186.930      231.188              1   186930.19   231188.32    SPCM@1
-    2     7.97      206.185       19.255       19.255             20      962.76      962.77    TRMTOS@1
-    3     7.60      224.550       18.365       18.365             20      918.23      918.23    TRSTOM@1
-    4     1.76      228.807        4.257        4.257             20      212.84      212.84    SPCSI_transferts2@1
-    5     0.83      230.820        2.013       44.258             20      100.64     2212.91    SPCM_SIMPLE@1
-    6     0.76      232.648        1.829        1.829             10      182.87      182.87    TRLTOG@1
-    7     0.61      234.112        1.463        1.465           5000        0.29        0.29    LEINV_DGEMM_1@1
-    8     0.60      235.556        1.444        1.446           5000        0.29        0.29    LEINV_DGEMM_2@1
-    9     0.56      236.914        1.358        8.522             10      135.78      852.15    INV_TRANS@1
-   10     0.49      238.093        1.180        1.181           5000        0.24        0.24    FFT992@1
-   11     0.41      239.082        0.988        3.901           5000        0.20        0.78    LTINV_MOD@1
-   12     0.39      240.028        0.946        0.946             10       94.62       94.62    GATH_GRID@1
-   13     0.35      240.868        0.840        0.840              1      839.95      839.96    SETUP_TRANS@1
-   14     0.10      241.121        0.253        0.253             10       25.30       25.30    TRMTOL@1
-   15     0.03      241.194        0.073        0.073             20        3.64        3.64    SITNU_transpose2@1
-   16     0.02      241.253        0.060        0.060             20        2.98        2.98    SIGAM_transpose2@1
-   17     0.02      241.302        0.049        4.625             20        2.43      231.26    SPCSI@1
-   18     0.01      241.335        0.033        0.035             40        0.83        0.87    VERINT@1
-   19     0.01      241.366        0.031        0.031             20        1.55        1.55    SPCSI_boucle2@1
-   20     0.01      241.397        0.031        0.031             20        1.54        1.54    SPCSI_boucle3@1
-   21     0.01      241.426        0.029        0.029             20        1.46        1.46    SIGAM_transpose1@1
-   22     0.01      241.445        0.019        0.019             20        0.93        0.93    SITNU_transpose1@1
-   23     0.01      241.462        0.018        0.018             20        0.88        0.88    SPCSI_boucle1@1
-   24     0.01      241.478        0.015        0.015             20        0.76        0.76    SPCSI_boucle4@1
-   25     0.00      241.482        0.004        0.004             20        0.19        0.19    SPCSI_transferts1@1
-   26     0.00      241.484        0.002        0.125             20        0.11        6.26    SIGAM_SP_OPENMP@1
-   27     0.00      241.486        0.002        0.095             20        0.08        4.75    SITNU_SP_OPENMP@1
-   28     0.00      241.487        0.001        0.001             40        0.03        0.03    VERINT_DGEMM_2@1
-   29     0.00      241.487        0.001        0.001             20        0.03        0.03    SPCSI_mxmaop1@1
-   30     0.00      241.488        0.000        0.000             20        0.02        0.02    SIGAM_cond_lim@1
-   31     0.00      241.488        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
-   32     0.00      241.489        0.000        0.000             20        0.02        0.02    SPCSI_mxmaop2@1
-   33     0.00      241.489        0.000        0.000             20        0.02        0.02    SITNU_cond_lim@1
-   34     0.00      241.489        0.000        0.035             40        0.00        0.87    VERDISINT@1
-   35     0.00      241.489        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
+    1    55.97      130.471      130.471      130.471              1   130470.69   130470.69    SPCM_transfert1@1
+    2    22.18      182.186       51.715       51.715              1    51715.10    51715.10    SPCM_transfert2@1
+    3     8.24      201.403       19.218       19.218             20      960.88      960.88    TRMTOS@1
+    4     7.94      219.914       18.510       18.510             20      925.51      925.51    TRSTOM@1
+    5     1.01      222.263        2.350        2.350             20      117.48      117.48    SPCM_repetitif@1
+    6     0.63      223.734        1.471        1.473           5000        0.29        0.29    LEINV_DGEMM_1@1
+    7     0.62      225.176        1.442        1.444           5000        0.29        0.29    LEINV_DGEMM_2@1
+    8     0.59      226.557        1.381        1.381             10      138.10      138.10    TRLTOG@1
+    9     0.53      227.781        1.224        1.224             20       61.20       61.20    SPCM_SIMPLE_transfert2@1
+   10     0.52      228.984        1.203        1.204           5000        0.24        0.24    FFT992@1
+   11     0.42      229.974        0.990        3.909           5000        0.20        0.78    LTINV_MOD@1
+   12     0.33      230.751        0.777        0.777              1      777.08      777.08    SETUP_TRANS@1
+   13     0.30      231.460        0.709        7.412             10       70.91      741.19    INV_TRANS@1
+   14     0.30      232.153        0.692        0.692             20       34.61       34.61    SPCM_SIMPLE_transfert1@1
+   15     0.15      232.499        0.346        0.346             10       34.64       34.65    GATH_GRID@1
+   16     0.09      232.707        0.208        0.208             10       20.79       20.79    TRMTOL@1
+   17     0.04      232.789        0.083        0.083             20        4.13        4.13    SITNU_transpose2@1
+   18     0.03      232.849        0.059        0.059             20        2.97        2.97    SIGAM_transpose2@1
+   19     0.02      232.907        0.058       40.065             20        2.91     2003.27    SPCM_SIMPLE@1
+   20     0.01      232.942        0.035        0.363             20        1.73       18.16    SPCSI@1
+   21     0.01      232.975        0.034        0.035             40        0.84        0.87    VERINT@1
+   22     0.01      233.007        0.031        0.031             20        1.57        1.57    SPCSI_boucle3@1
+   23     0.01      233.038        0.031        0.031             20        1.56        1.56    SPCSI_boucle2@1
+   24     0.01      233.059        0.021        0.021             20        1.07        1.07    SIGAM_transpose1@1
+   25     0.01      233.079        0.019        0.020             20        0.97        0.98    SPCSI_boucle1@1
+   26     0.01      233.098        0.019        0.019             20        0.96        0.96    SITNU_transpose1@1
+   27     0.01      233.114        0.016        0.016             20        0.79        0.79    SPCSI_boucle4@1
+   28     0.00      233.119        0.005        0.005             20        0.23        0.23    SPCSI_transferts1@1
+   29     0.00      233.121        0.003        0.118             20        0.13        5.88    SIGAM_SP_OPENMP@1
+   30     0.00      233.123        0.002        0.002             20        0.09        0.09    SPCSI_transferts2@1
+   31     0.00      233.125        0.002        0.106             20        0.09        5.28    SITNU_SP_OPENMP@1
+   32     0.00      233.126        0.001        0.001             40        0.03        0.03    VERINT_DGEMM_2@1
+   33     0.00      233.127        0.001        0.001             20        0.03        0.03    SPCSI_mxmaop1@1
+   34     0.00      233.127        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
+   35     0.00      233.127        0.000      224.601              1        0.42   224601.26    SPCM@1
+   36     0.00      233.128        0.000        0.000             20        0.02        0.02    SIGAM_cond_lim@1
+   37     0.00      233.128        0.000        0.000             20        0.02        0.02    SPCSI_mxmaop2@1
+   38     0.00      233.128        0.000        0.000             20        0.02        0.02    SITNU_cond_lim@1
+   39     0.00      233.129        0.000        0.035             40        0.00        0.88    VERDISINT@1
+   40     0.00      233.129        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
