--- a/nvhpc_gpu/drhook.prof.1
+++ b/nvhpc_gpu/drhook.prof.1
@@ -1,53 +1,55 @@
 Profiling information for program='/home/gmap/mrpm/penigaudn/spcm_simple_kernel/nvhpc_gpu/./spcm.x', proc#1:
-	No. of instrumented routines called : 40
-	Instrumentation started : 20230303 154636
-	Instrumentation   ended : 20230303 155411
+	No. of instrumented routines called : 42
+	Instrumentation started : 20230307 095032
+	Instrumentation   ended : 20230307 095507
 	Instrumentation overhead: 0.00%
-	Memory usage : 28391 MB (heap), 11110 MB (rss), 0 MB (stack), 34556 MB (vmpeak), 0 (paging)
-	Wall-time is 233.13 sec on proc#1 (1 procs, 1 threads)
-	Thread#1:      233.13 sec (100.00%) -- Cycles: 524556468385 (1024667140748)
+	Memory usage : 28832 MB (heap), 11106 MB (rss), 0 MB (stack), 35196 MB (vmpeak), 0 (paging)
+	Wall-time is 173.38 sec on proc#1 (1 procs, 1 threads)
+	Thread#1:      173.38 sec (100.00%) -- Cycles: 390111756029 (616622325030)
 
     #  % Time         Cumul         Self        Total     # of calls        Self       Total    Routine@<thread-id>
                                                                              (Size; Size/sec; Size/call; MinSize; MaxSize)
         (self)        (sec)        (sec)        (sec)                    ms/call     ms/call
 
-    1    55.97      130.471      130.471      130.471              1   130470.69   130470.69    SPCM_transfert1@1
-    2    22.18      182.186       51.715       51.715              1    51715.10    51715.10    SPCM_transfert2@1
-    3     8.24      201.403       19.218       19.218             20      960.88      960.88    TRMTOS@1
-    4     7.94      219.914       18.510       18.510             20      925.51      925.51    TRSTOM@1
-    5     1.01      222.263        2.350        2.350             20      117.48      117.48    SPCM_repetitif@1
-    6     0.63      223.734        1.471        1.473           5000        0.29        0.29    LEINV_DGEMM_1@1
-    7     0.62      225.176        1.442        1.444           5000        0.29        0.29    LEINV_DGEMM_2@1
-    8     0.59      226.557        1.381        1.381             10      138.10      138.10    TRLTOG@1
-    9     0.53      227.781        1.224        1.224             20       61.20       61.20    SPCM_SIMPLE_transfert2@1
-   10     0.52      228.984        1.203        1.204           5000        0.24        0.24    FFT992@1
-   11     0.42      229.974        0.990        3.909           5000        0.20        0.78    LTINV_MOD@1
-   12     0.33      230.751        0.777        0.777              1      777.08      777.08    SETUP_TRANS@1
-   13     0.30      231.460        0.709        7.412             10       70.91      741.19    INV_TRANS@1
-   14     0.30      232.153        0.692        0.692             20       34.61       34.61    SPCM_SIMPLE_transfert1@1
-   15     0.15      232.499        0.346        0.346             10       34.64       34.65    GATH_GRID@1
-   16     0.09      232.707        0.208        0.208             10       20.79       20.79    TRMTOL@1
-   17     0.04      232.789        0.083        0.083             20        4.13        4.13    SITNU_transpose2@1
-   18     0.03      232.849        0.059        0.059             20        2.97        2.97    SIGAM_transpose2@1
-   19     0.02      232.907        0.058       40.065             20        2.91     2003.27    SPCM_SIMPLE@1
-   20     0.01      232.942        0.035        0.363             20        1.73       18.16    SPCSI@1
-   21     0.01      232.975        0.034        0.035             40        0.84        0.87    VERINT@1
-   22     0.01      233.007        0.031        0.031             20        1.57        1.57    SPCSI_boucle3@1
-   23     0.01      233.038        0.031        0.031             20        1.56        1.56    SPCSI_boucle2@1
-   24     0.01      233.059        0.021        0.021             20        1.07        1.07    SIGAM_transpose1@1
-   25     0.01      233.079        0.019        0.020             20        0.97        0.98    SPCSI_boucle1@1
-   26     0.01      233.098        0.019        0.019             20        0.96        0.96    SITNU_transpose1@1
-   27     0.01      233.114        0.016        0.016             20        0.79        0.79    SPCSI_boucle4@1
-   28     0.00      233.119        0.005        0.005             20        0.23        0.23    SPCSI_transferts1@1
-   29     0.00      233.121        0.003        0.118             20        0.13        5.88    SIGAM_SP_OPENMP@1
-   30     0.00      233.123        0.002        0.002             20        0.09        0.09    SPCSI_transferts2@1
-   31     0.00      233.125        0.002        0.106             20        0.09        5.28    SITNU_SP_OPENMP@1
-   32     0.00      233.126        0.001        0.001             40        0.03        0.03    VERINT_DGEMM_2@1
-   33     0.00      233.127        0.001        0.001             20        0.03        0.03    SPCSI_mxmaop1@1
-   34     0.00      233.127        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
-   35     0.00      233.127        0.000      224.601              1        0.42   224601.26    SPCM@1
-   36     0.00      233.128        0.000        0.000             20        0.02        0.02    SIGAM_cond_lim@1
-   37     0.00      233.128        0.000        0.000             20        0.02        0.02    SPCSI_mxmaop2@1
-   38     0.00      233.128        0.000        0.000             20        0.02        0.02    SITNU_cond_lim@1
-   39     0.00      233.129        0.000        0.035             40        0.00        0.88    VERDISINT@1
-   40     0.00      233.129        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
+    1    44.81       77.684       77.684       77.684              1    77684.19    77684.19    SPCM_transfert1@1
+    2    27.04      124.567       46.883       46.883              1    46883.19    46883.19    SPCM_transfert2@1
+    3    10.66      143.044       18.477       18.477             20      923.83      923.83    TRMTOS@1
+    4    10.17      160.680       17.636       17.637             20      881.82      881.83    TRSTOM@1
+    5     1.24      162.833        2.152        2.153             20      107.62      107.63    SPCM_repetitif@1
+    6     0.81      164.237        1.404        1.406           5000        0.28        0.28    LEINV_DGEMM_2@1
+    7     0.81      165.637        1.399        1.401           5000        0.28        0.28    LEINV_DGEMM_1@1
+    8     0.76      166.946        1.309        1.309             10      130.92      130.93    TRLTOG@1
+    9     0.70      168.163        1.217        1.217             20       60.85       60.85    SPCM_SIMPLE_transfert2@1
+   10     0.65      169.297        1.135        1.136           5000        0.23        0.23    FFT992@1
+   11     0.56      170.270        0.973        3.781           5000        0.19        0.76    LTINV_MOD@1
+   12     0.44      171.032        0.762        0.762              1      761.74      761.74    SETUP_TRANS@1
+   13     0.40      171.722        0.690        7.119             10       69.01      711.92    INV_TRANS@1
+   14     0.40      172.409        0.686        0.686             20       34.32       34.32    SPCM_SIMPLE_transfert1@1
+   15     0.20      172.751        0.342        0.342             10       34.20       34.20    GATH_GRID@1
+   16     0.12      172.953        0.202        0.202             10       20.23       20.23    TRMTOL@1
+   17     0.05      173.037        0.084        0.084             20        4.21        4.21    SITNU_transpose2@1
+   18     0.04      173.107        0.070       38.440             20        3.48     1922.01    SPCM_SIMPLE@1
+   19     0.03      173.167        0.061        0.061             20        3.03        3.03    SIGAM_transpose2@1
+   20     0.02      173.200        0.032        0.034             40        0.81        0.84    VERINT@1
+   21     0.02      173.231        0.032        0.032             20        1.59        1.59    SPCSI_boucle2@1
+   22     0.02      173.263        0.032        0.032             20        1.58        1.58    SPCSI_boucle3@1
+   23     0.01      173.287        0.024        0.354             20        1.22       17.70    SPCSI@1
+   24     0.01      173.308        0.021        0.021             20        1.03        1.03    SIGAM_transpose1@1
+   25     0.01      173.328        0.020        0.020             20        0.98        0.98    SPCSI_boucle1@1
+   26     0.01      173.347        0.019        0.019             20        0.96        0.96    SITNU_transpose1@1
+   27     0.01      173.363        0.016        0.016             20        0.79        0.79    SPCSI_boucle4@1
+   28     0.00      173.368        0.005        0.005             20        0.27        0.27    SPCSI_transferts1@1
+   29     0.00      173.370        0.002        0.002             20        0.10        0.10    SITNU_transfert1@1
+   30     0.00      173.372        0.002        0.002             20        0.08        0.08    SPCSI_transferts2@1
+   31     0.00      173.373        0.001        0.001             40        0.03        0.03    VERINT_DGEMM_2@1
+   32     0.00      173.374        0.001        0.116             20        0.04        5.79    SIGAM_SP_OPENMP@1
+   33     0.00      173.374        0.000        0.000             20        0.02        0.02    SPCSI_mxmaop1@1
+   34     0.00      173.375        0.000      165.161              1        0.46   165160.51    SPCM@1
+   35     0.00      173.375        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
+   36     0.00      173.375        0.000        0.000             20        0.02        0.02    SITNU_cond_lim@1
+   37     0.00      173.376        0.000        0.000             20        0.02        0.02    SIGAM_cond_lim@1
+   38     0.00      173.376        0.000        0.107             20        0.02        5.36    SITNU_SP_OPENMP@1
+   39     0.00      173.376        0.000        0.000             20        0.02        0.02    SITNU_transfert2@1
+   40     0.00      173.377        0.000        0.000             20        0.01        0.01    SPCSI_mxmaop2@1
+   41     0.00      173.377        0.000        0.034             40        0.00        0.84    VERDISINT@1
+   42     0.00      173.377        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
