--- a/nvhpc_gpu/drhook.prof.1
+++ b/nvhpc_gpu/drhook.prof.1
@@ -1,55 +1,57 @@
 Profiling information for program='/home/gmap/mrpm/penigaudn/spcm_simple_kernel/nvhpc_gpu/./spcm.x', proc#1:
-	No. of instrumented routines called : 42
-	Instrumentation started : 20230307 095032
-	Instrumentation   ended : 20230307 095507
+	No. of instrumented routines called : 44
+	Instrumentation started : 20230307 142222
+	Instrumentation   ended : 20230307 142703
 	Instrumentation overhead: 0.00%
-	Memory usage : 28832 MB (heap), 11106 MB (rss), 0 MB (stack), 35196 MB (vmpeak), 0 (paging)
-	Wall-time is 173.38 sec on proc#1 (1 procs, 1 threads)
-	Thread#1:      173.38 sec (100.00%) -- Cycles: 390111756029 (616622325030)
+	Memory usage : 28312 MB (heap), 11039 MB (rss), 0 MB (stack), 34477 MB (vmpeak), 0 (paging)
+	Wall-time is 178.83 sec on proc#1 (1 procs, 1 threads)
+	Thread#1:      178.83 sec (100.00%) -- Cycles: 402385105641 (632271997103)
 
     #  % Time         Cumul         Self        Total     # of calls        Self       Total    Routine@<thread-id>
                                                                              (Size; Size/sec; Size/call; MinSize; MaxSize)
         (self)        (sec)        (sec)        (sec)                    ms/call     ms/call
 
-    1    44.81       77.684       77.684       77.684              1    77684.19    77684.19    SPCM_transfert1@1
-    2    27.04      124.567       46.883       46.883              1    46883.19    46883.19    SPCM_transfert2@1
-    3    10.66      143.044       18.477       18.477             20      923.83      923.83    TRMTOS@1
-    4    10.17      160.680       17.636       17.637             20      881.82      881.83    TRSTOM@1
-    5     1.24      162.833        2.152        2.153             20      107.62      107.63    SPCM_repetitif@1
-    6     0.81      164.237        1.404        1.406           5000        0.28        0.28    LEINV_DGEMM_2@1
-    7     0.81      165.637        1.399        1.401           5000        0.28        0.28    LEINV_DGEMM_1@1
-    8     0.76      166.946        1.309        1.309             10      130.92      130.93    TRLTOG@1
-    9     0.70      168.163        1.217        1.217             20       60.85       60.85    SPCM_SIMPLE_transfert2@1
-   10     0.65      169.297        1.135        1.136           5000        0.23        0.23    FFT992@1
-   11     0.56      170.270        0.973        3.781           5000        0.19        0.76    LTINV_MOD@1
-   12     0.44      171.032        0.762        0.762              1      761.74      761.74    SETUP_TRANS@1
-   13     0.40      171.722        0.690        7.119             10       69.01      711.92    INV_TRANS@1
-   14     0.40      172.409        0.686        0.686             20       34.32       34.32    SPCM_SIMPLE_transfert1@1
-   15     0.20      172.751        0.342        0.342             10       34.20       34.20    GATH_GRID@1
-   16     0.12      172.953        0.202        0.202             10       20.23       20.23    TRMTOL@1
-   17     0.05      173.037        0.084        0.084             20        4.21        4.21    SITNU_transpose2@1
-   18     0.04      173.107        0.070       38.440             20        3.48     1922.01    SPCM_SIMPLE@1
-   19     0.03      173.167        0.061        0.061             20        3.03        3.03    SIGAM_transpose2@1
-   20     0.02      173.200        0.032        0.034             40        0.81        0.84    VERINT@1
-   21     0.02      173.231        0.032        0.032             20        1.59        1.59    SPCSI_boucle2@1
-   22     0.02      173.263        0.032        0.032             20        1.58        1.58    SPCSI_boucle3@1
-   23     0.01      173.287        0.024        0.354             20        1.22       17.70    SPCSI@1
-   24     0.01      173.308        0.021        0.021             20        1.03        1.03    SIGAM_transpose1@1
-   25     0.01      173.328        0.020        0.020             20        0.98        0.98    SPCSI_boucle1@1
-   26     0.01      173.347        0.019        0.019             20        0.96        0.96    SITNU_transpose1@1
-   27     0.01      173.363        0.016        0.016             20        0.79        0.79    SPCSI_boucle4@1
-   28     0.00      173.368        0.005        0.005             20        0.27        0.27    SPCSI_transferts1@1
-   29     0.00      173.370        0.002        0.002             20        0.10        0.10    SITNU_transfert1@1
-   30     0.00      173.372        0.002        0.002             20        0.08        0.08    SPCSI_transferts2@1
-   31     0.00      173.373        0.001        0.001             40        0.03        0.03    VERINT_DGEMM_2@1
-   32     0.00      173.374        0.001        0.116             20        0.04        5.79    SIGAM_SP_OPENMP@1
-   33     0.00      173.374        0.000        0.000             20        0.02        0.02    SPCSI_mxmaop1@1
-   34     0.00      173.375        0.000      165.161              1        0.46   165160.51    SPCM@1
-   35     0.00      173.375        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
-   36     0.00      173.375        0.000        0.000             20        0.02        0.02    SITNU_cond_lim@1
-   37     0.00      173.376        0.000        0.000             20        0.02        0.02    SIGAM_cond_lim@1
-   38     0.00      173.376        0.000        0.107             20        0.02        5.36    SITNU_SP_OPENMP@1
-   39     0.00      173.376        0.000        0.000             20        0.02        0.02    SITNU_transfert2@1
-   40     0.00      173.377        0.000        0.000             20        0.01        0.01    SPCSI_mxmaop2@1
-   41     0.00      173.377        0.000        0.034             40        0.00        0.84    VERDISINT@1
-   42     0.00      173.377        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
+    1    43.51       77.806       77.806       77.806              1    77805.81    77805.82    SPCM_transfert1@1
+    2    26.31      124.856       47.050       47.050              1    47050.37    47050.38    SPCM_transfert2@1
+    3    10.31      143.300       18.444       18.444             20      922.20      922.20    TRMTOS@1
+    4     9.86      160.931       17.631       17.631             20      881.56      881.56    TRSTOM@1
+    5     1.38      163.407        2.476        2.476             20      123.78      123.78    SPCM_SIMPLE_transfert2b@1
+    6     1.23      165.599        2.192        2.192             20      109.61      109.61    SPCM_repetitif@1
+    7     1.00      167.380        1.781        1.781             10      178.10      178.10    TRLTOG@1
+    8     0.80      168.811        1.430        1.432           5000        0.29        0.29    LEINV_DGEMM_1@1
+    9     0.80      170.240        1.430        1.431           5000        0.29        0.29    LEINV_DGEMM_2@1
+   10     0.67      171.437        1.197        8.199             10      119.70      819.85    INV_TRANS@1
+   11     0.67      172.632        1.194        1.194             20       59.72       59.72    SPCM_SIMPLE_transfert2a@1
+   12     0.64      173.776        1.144        1.146           5000        0.23        0.23    FFT992@1
+   13     0.62      174.876        1.101        1.101             20       55.03       55.03    SPCM_SIMPLE_transfert1b@1
+   14     0.55      175.867        0.990        3.855           5000        0.20        0.77    LTINV_MOD@1
+   15     0.46      176.688        0.821        0.821             10       82.13       82.13    GATH_GRID@1
+   16     0.44      177.483        0.795        0.795              1      794.89      794.89    SETUP_TRANS@1
+   17     0.39      178.176        0.693        0.693             20       34.67       34.67    SPCM_SIMPLE_transfert1a@1
+   18     0.12      178.396        0.220        0.220             10       21.96       21.96    TRMTOL@1
+   19     0.04      178.460        0.064        0.064             20        3.21        3.21    SITNU_transpose2@1
+   20     0.03      178.519        0.059        0.059             20        2.97        2.97    SIGAM_transpose2@1
+   21     0.03      178.573        0.054      169.022              1       53.51   169022.45    SPCM@1
+   22     0.03      178.621        0.048       41.921             20        2.38     2096.03    SPCM_SIMPLE@1
+   23     0.02      178.664        0.044        0.044             40        1.09        1.09    VERINT_DGEMM_2@1
+   24     0.01      178.686        0.022        0.022             20        1.09        1.09    SITNU_transpose1@1
+   25     0.01      178.708        0.022        0.022             20        1.09        1.09    SPCSI_mxmaop1@1
+   26     0.01      178.729        0.022        0.022             20        1.08        1.08    SPCSI_mxmaop2@1
+   27     0.01      178.750        0.021        0.021             20        1.04        1.04    SIGAM_transpose1@1
+   28     0.01      178.769        0.019        0.019             20        0.97        0.97    SPCSI_boucle1@1
+   29     0.01      178.785        0.016        0.016             20        0.79        0.79    SPCSI_boucle4@1
+   30     0.01      178.796        0.011        0.055             40        0.28        1.36    VERINT@1
+   31     0.01      178.806        0.010        0.010             20        0.50        0.50    SPCSI_boucle2@1
+   32     0.01      178.816        0.010        0.010             20        0.49        0.49    SPCSI_boucle3@1
+   33     0.00      178.824        0.008        0.334             20        0.40       16.68    SPCSI@1
+   34     0.00      178.826        0.001        0.001             20        0.07        0.07    SPCSI_transferts1@1
+   35     0.00      178.827        0.001        0.001             20        0.07        0.07    SPCSI_transferts2@1
+   36     0.00      178.828        0.001        0.001             20        0.04        0.04    SITNU_transfert1@1
+   37     0.00      178.829        0.001        0.115             20        0.04        5.73    SIGAM_SP_OPENMP@1
+   38     0.00      178.829        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
+   39     0.00      178.829        0.000        0.000             20        0.02        0.02    SIGAM_cond_lim@1
+   40     0.00      178.830        0.000        0.110             20        0.02        5.49    SITNU_SP_OPENMP@1
+   41     0.00      178.830        0.000        0.000             20        0.02        0.02    SITNU_cond_lim@1
+   42     0.00      178.830        0.000        0.000             20        0.01        0.01    SITNU_transfert2@1
+   43     0.00      178.830        0.000        0.055             40        0.00        1.37    VERDISINT@1
+   44     0.00      178.830        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
