--- a/nvhpc_gpu/drhook.prof.1
+++ b/nvhpc_gpu/drhook.prof.1
@@ -1,57 +1,58 @@
 Profiling information for program='/home/gmap/mrpm/penigaudn/spcm_simple_kernel/nvhpc_gpu/./spcm.x', proc#1:
-	No. of instrumented routines called : 44
-	Instrumentation started : 20230307 153957
-	Instrumentation   ended : 20230307 154435
+	No. of instrumented routines called : 45
+	Instrumentation started : 20230308 141618
+	Instrumentation   ended : 20230308 142049
 	Instrumentation overhead: 0.00%
-	Memory usage : 28352 MB (heap), 11076 MB (rss), 0 MB (stack), 34517 MB (vmpeak), 0 (paging)
-	Wall-time is 175.55 sec on proc#1 (1 procs, 1 threads)
-	Thread#1:      175.55 sec (100.00%) -- Cycles: 395004093073 (624000619597)
+	Memory usage : 28846 MB (heap), 11567 MB (rss), 0 MB (stack), 35010 MB (vmpeak), 0 (paging)
+	Wall-time is 169.31 sec on proc#1 (1 procs, 1 threads)
+	Thread#1:      169.31 sec (100.00%) -- Cycles: 380962604067 (608567794155)
 
     #  % Time         Cumul         Self        Total     # of calls        Self       Total    Routine@<thread-id>
                                                                              (Size; Size/sec; Size/call; MinSize; MaxSize)
         (self)        (sec)        (sec)        (sec)                    ms/call     ms/call
 
-    1    44.60       78.298       78.298       78.298              1    78298.35    78298.36    SPCM_transfert1@1
-    2    26.68      125.134       46.836       46.836              1    46836.00    46836.01    SPCM_transfert2@1
-    3    10.56      143.676       18.542       18.542             20      927.09      927.09    TRMTOS@1
-    4    10.01      161.249       17.573       17.573             20      878.63      878.63    TRSTOM@1
-    5     1.23      163.405        2.157        2.157             20      107.83      107.83    SPCM_repetitif@1
-    6     0.99      165.152        1.747        1.747             10      174.65      174.66    TRLTOG@1
-    7     0.83      166.606        1.454        1.456           5000        0.29        0.29    LEINV_DGEMM_2@1
-    8     0.82      168.047        1.441        1.443           5000        0.29        0.29    LEINV_DGEMM_1@1
-    9     0.69      169.266        1.219        8.263             10      121.88      826.35    INV_TRANS@1
-   10     0.68      170.452        1.186        1.186             20       59.28       59.28    SPCM_SIMPLE_transfert2a@1
-   11     0.66      171.610        1.158        1.160           5000        0.23        0.23    FFT992@1
-   12     0.57      172.608        0.998        3.898           5000        0.20        0.78    LTINV_MOD@1
-   13     0.47      173.431        0.824        0.824             10       82.36       82.36    GATH_GRID@1
-   14     0.44      174.209        0.777        0.777              1      777.24      777.24    SETUP_TRANS@1
-   15     0.39      174.900        0.691        0.691             20       34.57       34.57    SPCM_SIMPLE_transfert1a@1
-   16     0.14      175.140        0.240        0.240             10       23.99       23.99    TRMTOL@1
-   17     0.03      175.196        0.056        0.056             20        2.82        2.82    SITNU_transpose2@1
-   18     0.03      175.251        0.054        0.054             20        2.71        2.71    SIGAM_transpose2@1
-   19     0.03      175.298        0.048       38.367             20        2.39     1918.36    SPCM_SIMPLE@1
-   20     0.03      175.345        0.047        0.047             40        1.17        1.17    VERINT_DGEMM_2@1
-   21     0.02      175.379        0.034      165.693              1       34.36   165692.53    SPCM@1
-   22     0.01      175.402        0.023        0.023             20        1.16        1.16    SPCSI_mxmaop1@1
-   23     0.01      175.426        0.023        0.023             20        1.16        1.16    SPCSI_mxmaop2@1
-   24     0.01      175.447        0.022        0.022             20        1.08        1.08    SIGAM_transpose1@1
-   25     0.01      175.467        0.020        0.020             20        1.00        1.01    SITNU_transpose1@1
-   26     0.01      175.486        0.019        0.019             20        0.93        0.93    SPCSI_boucle1@1
-   27     0.01      175.501        0.015        0.015             20        0.77        0.77    SPCSI_boucle4@1
-   28     0.01      175.512        0.011        0.058             40        0.28        1.44    VERINT@1
-   29     0.01      175.523        0.011        0.011             20        0.54        0.54    SPCSI_boucle2@1
-   30     0.01      175.533        0.010        0.010             20        0.50        0.50    SPCSI_boucle3@1
-   31     0.00      175.539        0.006        0.006             20        0.30        0.30    SPCM_SIMPLE_transfert1b@1
-   32     0.00      175.545        0.006        0.322             20        0.28       16.08    SPCSI@1
-   33     0.00      175.546        0.001        0.001             20        0.06        0.06    SITNU_transfert1@1
-   34     0.00      175.547        0.001        0.112             20        0.05        5.58    SIGAM_SP_OPENMP@1
-   35     0.00      175.547        0.001        0.001             20        0.03        0.03    SPCSI_transferts1@1
-   36     0.00      175.548        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
-   37     0.00      175.548        0.000        0.000             20        0.02        0.02    SPCM_SIMPLE_transfert2b@1
-   38     0.00      175.549        0.000        0.000             20        0.02        0.02    SIGAM_cond_lim@1
-   39     0.00      175.549        0.000        0.000             20        0.02        0.02    SITNU_cond_lim@1
-   40     0.00      175.549        0.000        0.102             20        0.02        5.12    SITNU_SP_OPENMP@1
-   41     0.00      175.550        0.000        0.000             20        0.01        0.01    SITNU_transfert2@1
-   42     0.00      175.550        0.000        0.000             20        0.01        0.01    SPCSI_transferts2@1
-   43     0.00      175.550        0.000        0.058             40        0.00        1.45    VERDISINT@1
-   44     0.00      175.550        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
+    1    38.90       65.858       65.858       65.858              1    65857.70    65857.71    SPCM_transfert1@1
+    2    32.01      120.055       54.197       54.197              1    54197.24    54197.25    SPCM_transfert2@1
+    3    10.93      138.559       18.504       18.504             20      925.21      925.21    TRMTOS@1
+    4    10.38      156.139       17.580       17.580             20      878.98      878.98    TRSTOM@1
+    5     1.41      158.532        2.394        2.394             20      119.69      119.69    SPCM_repetitif@1
+    6     0.83      159.946        1.413        1.415           5000        0.28        0.28    LEINV_DGEMM_1@1
+    7     0.83      161.353        1.407        1.409           5000        0.28        0.28    LEINV_DGEMM_2@1
+    8     0.79      162.692        1.339        4.164           5000        0.27        0.83    LTINV_MOD@1
+    9     0.77      164.002        1.310        1.310             10      131.04      131.05    TRLTOG@1
+   10     0.71      165.200        1.198        1.198             20       59.91       59.91    SPCM_SIMPLE_transfert2a@1
+   11     0.67      166.328        1.128        1.129           5000        0.23        0.23    FFT992@1
+   12     0.44      167.075        0.747        0.747              1      746.59      746.59    SETUP_TRANS@1
+   13     0.41      167.769        0.694        0.694             20       34.71       34.72    SPCM_SIMPLE_transfert1a@1
+   14     0.41      168.460        0.691        7.496             10       69.09      749.56    INV_TRANS@1
+   15     0.20      168.798        0.339        0.339             10       33.86       33.86    GATH_GRID@1
+   16     0.12      168.999        0.201        0.201             10       20.08       20.08    TRMTOL@1
+   17     0.03      169.051        0.052       38.253             20        2.58     1912.65    SPCM_SIMPLE@1
+   18     0.03      169.099        0.048        0.048             40        1.21        1.21    VERINT_DGEMM_2@1
+   19     0.02      169.134        0.035      160.736              1       34.53   160736.32    SPCM@1
+   20     0.01      169.157        0.023        0.023             20        1.14        1.14    SPCSI_mxmaop1@1
+   21     0.01      169.179        0.023        0.023             20        1.14        1.14    SPCSI_mxmaop2@1
+   22     0.01      169.197        0.017        0.017             20        0.87        0.87    SPCSI_boucle1@1
+   23     0.01      169.212        0.015        0.015             20        0.76        0.76    SPCSI_boucle4@1
+   24     0.01      169.224        0.012        0.012             20        0.60        0.60    VERINT_calcul@1
+   25     0.01      169.236        0.012        0.012             20        0.59        0.59    SIGAM_transpose1@1
+   26     0.01      169.247        0.012        0.012             20        0.58        0.58    SIGAM_transpose2@1
+   27     0.01      169.258        0.011        0.011             20        0.55        0.55    SITNU_transpose1@1
+   28     0.01      169.269        0.011        0.011             20        0.53        0.53    SITNU_transpose2@1
+   29     0.01      169.279        0.011        0.011             20        0.53        0.53    SPCSI_boucle2@1
+   30     0.01      169.289        0.010        0.010             20        0.49        0.49    SPCSI_boucle3@1
+   31     0.00      169.294        0.005        0.222             20        0.27       11.08    SPCSI@1
+   32     0.00      169.299        0.004        0.004             20        0.21        0.21    SITNU_cond_lim@1
+   33     0.00      169.302        0.004        0.004             20        0.18        0.18    SIGAM_cond_lim@1
+   34     0.00      169.305        0.003        0.003             20        0.16        0.16    SPCM_SIMPLE_transfert1b@1
+   35     0.00      169.307        0.001        0.001             20        0.07        0.07    SITNU_calcul1@1
+   36     0.00      169.308        0.001        0.064             20        0.03        3.19    SIGAM_SP_OPENMP@1
+   37     0.00      169.308        0.001        0.001             20        0.03        0.03    SPCSI_transferts1@1
+   38     0.00      169.309        0.000        0.061             40        0.01        1.53    VERDISINT@1
+   39     0.00      169.309        0.000        0.061             40        0.01        1.52    VERINT@1
+   40     0.00      169.309        0.000        0.000             20        0.02        0.02    SPCSI_transferts2@1
+   41     0.00      169.310        0.000        0.000             20        0.02        0.02    SITNU_transfert1@1
+   42     0.00      169.310        0.000        0.000             20        0.01        0.01    SPCM_SIMPLE_transfert2b@1
+   43     0.00      169.310        0.000        0.000             20        0.01        0.01    SITNU_transfert2@1
+   44     0.00      169.310        0.000        0.053             20        0.01        2.65    SITNU_SP_OPENMP@1
+   45     0.00      169.310        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
