après inversion depuis spcm_simple - deux boucles

--- a/nvhpc_gpu/drhook.prof.1
+++ b/nvhpc_gpu/drhook.prof.1
@@ -1,58 +1,60 @@
 Profiling information for program='/home/gmap/mrpm/penigaudn/spcm_simple_kernel/nvhpc_gpu/./spcm.x', proc#1:
-	No. of instrumented routines called : 45
-	Instrumentation started : 20230308 141618
-	Instrumentation   ended : 20230308 142049
+	No. of instrumented routines called : 47
+	Instrumentation started : 20230310 093447
+	Instrumentation   ended : 20230310 093935
 	Instrumentation overhead: 0.00%
-	Memory usage : 28846 MB (heap), 11567 MB (rss), 0 MB (stack), 35010 MB (vmpeak), 0 (paging)
-	Wall-time is 169.31 sec on proc#1 (1 procs, 1 threads)
-	Thread#1:      169.31 sec (100.00%) -- Cycles: 380962604067 (608567794155)
+	Memory usage : 28298 MB (heap), 11023 MB (rss), 0 MB (stack), 35298 MB (vmpeak), 0 (paging)
+	Wall-time is 185.30 sec on proc#1 (1 procs, 1 threads)
+	Thread#1:      185.30 sec (100.00%) -- Cycles: 416933119417 (646680537203)
 
     #  % Time         Cumul         Self        Total     # of calls        Self       Total    Routine@<thread-id>
                                                                              (Size; Size/sec; Size/call; MinSize; MaxSize)
         (self)        (sec)        (sec)        (sec)                    ms/call     ms/call
 
-    1    38.90       65.858       65.858       65.858              1    65857.70    65857.71    SPCM_transfert1@1
-    2    32.01      120.055       54.197       54.197              1    54197.24    54197.25    SPCM_transfert2@1
-    3    10.93      138.559       18.504       18.504             20      925.21      925.21    TRMTOS@1
-    4    10.38      156.139       17.580       17.580             20      878.98      878.98    TRSTOM@1
-    5     1.41      158.532        2.394        2.394             20      119.69      119.69    SPCM_repetitif@1
-    6     0.83      159.946        1.413        1.415           5000        0.28        0.28    LEINV_DGEMM_1@1
-    7     0.83      161.353        1.407        1.409           5000        0.28        0.28    LEINV_DGEMM_2@1
-    8     0.79      162.692        1.339        4.164           5000        0.27        0.83    LTINV_MOD@1
-    9     0.77      164.002        1.310        1.310             10      131.04      131.05    TRLTOG@1
-   10     0.71      165.200        1.198        1.198             20       59.91       59.91    SPCM_SIMPLE_transfert2a@1
-   11     0.67      166.328        1.128        1.129           5000        0.23        0.23    FFT992@1
-   12     0.44      167.075        0.747        0.747              1      746.59      746.59    SETUP_TRANS@1
-   13     0.41      167.769        0.694        0.694             20       34.71       34.72    SPCM_SIMPLE_transfert1a@1
-   14     0.41      168.460        0.691        7.496             10       69.09      749.56    INV_TRANS@1
-   15     0.20      168.798        0.339        0.339             10       33.86       33.86    GATH_GRID@1
-   16     0.12      168.999        0.201        0.201             10       20.08       20.08    TRMTOL@1
-   17     0.03      169.051        0.052       38.253             20        2.58     1912.65    SPCM_SIMPLE@1
-   18     0.03      169.099        0.048        0.048             40        1.21        1.21    VERINT_DGEMM_2@1
-   19     0.02      169.134        0.035      160.736              1       34.53   160736.32    SPCM@1
-   20     0.01      169.157        0.023        0.023             20        1.14        1.14    SPCSI_mxmaop1@1
-   21     0.01      169.179        0.023        0.023             20        1.14        1.14    SPCSI_mxmaop2@1
-   22     0.01      169.197        0.017        0.017             20        0.87        0.87    SPCSI_boucle1@1
-   23     0.01      169.212        0.015        0.015             20        0.76        0.76    SPCSI_boucle4@1
-   24     0.01      169.224        0.012        0.012             20        0.60        0.60    VERINT_calcul@1
-   25     0.01      169.236        0.012        0.012             20        0.59        0.59    SIGAM_transpose1@1
-   26     0.01      169.247        0.012        0.012             20        0.58        0.58    SIGAM_transpose2@1
-   27     0.01      169.258        0.011        0.011             20        0.55        0.55    SITNU_transpose1@1
-   28     0.01      169.269        0.011        0.011             20        0.53        0.53    SITNU_transpose2@1
-   29     0.01      169.279        0.011        0.011             20        0.53        0.53    SPCSI_boucle2@1
-   30     0.01      169.289        0.010        0.010             20        0.49        0.49    SPCSI_boucle3@1
-   31     0.00      169.294        0.005        0.222             20        0.27       11.08    SPCSI@1
-   32     0.00      169.299        0.004        0.004             20        0.21        0.21    SITNU_cond_lim@1
-   33     0.00      169.302        0.004        0.004             20        0.18        0.18    SIGAM_cond_lim@1
-   34     0.00      169.305        0.003        0.003             20        0.16        0.16    SPCM_SIMPLE_transfert1b@1
-   35     0.00      169.307        0.001        0.001             20        0.07        0.07    SITNU_calcul1@1
-   36     0.00      169.308        0.001        0.064             20        0.03        3.19    SIGAM_SP_OPENMP@1
-   37     0.00      169.308        0.001        0.001             20        0.03        0.03    SPCSI_transferts1@1
-   38     0.00      169.309        0.000        0.061             40        0.01        1.53    VERDISINT@1
-   39     0.00      169.309        0.000        0.061             40        0.01        1.52    VERINT@1
-   40     0.00      169.309        0.000        0.000             20        0.02        0.02    SPCSI_transferts2@1
-   41     0.00      169.310        0.000        0.000             20        0.02        0.02    SITNU_transfert1@1
-   42     0.00      169.310        0.000        0.000             20        0.01        0.01    SPCM_SIMPLE_transfert2b@1
-   43     0.00      169.310        0.000        0.000             20        0.01        0.01    SITNU_transfert2@1
-   44     0.00      169.310        0.000        0.053             20        0.01        2.65    SITNU_SP_OPENMP@1
-   45     0.00      169.310        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
+    1    42.53       78.812       78.812       78.812              1    78812.37    78812.38    SPCM_transfert1@1
+    2    25.41      125.888       47.076       47.076              1    47075.80    47075.80    SPCM_transfert2@1
+    3     9.97      144.354       18.466       18.466             20      923.31      923.32    TRMTOS@1
+    4     9.51      161.978       17.623       17.623             20      881.16      881.16    TRSTOM@1
+    5     2.33      166.300        4.323        4.323             20      216.14      216.14    SPCM_SIMPLE_transpose2@1
+    6     2.28      170.529        4.228        4.229             20      211.42      211.43    SPCM_SIMPLE_transpose1@1
+    7     1.20      172.753        2.224        2.225             20      111.22      111.23    SPCM_repetitif@1
+    8     0.96      174.532        1.779        1.779             10      177.89      177.89    TRLTOG@1
+    9     0.78      175.970        1.438        1.439           5000        0.29        0.29    LEINV_DGEMM_1@1
+   10     0.77      177.402        1.432        1.434           5000        0.29        0.29    LEINV_DGEMM_2@1
+   11     0.68      178.656        1.254        8.322             10      125.41      832.21    INV_TRANS@1
+   12     0.64      179.839        1.183        1.183             20       59.15       59.15    SPCM_SIMPLE_transfert2a@1
+   13     0.62      180.994        1.154        1.156           5000        0.23        0.23    FFT992@1
+   14     0.54      182.001        1.007        3.882           5000        0.20        0.78    LTINV_MOD@1
+   15     0.44      182.821        0.820        0.820             10       81.98       81.98    GATH_GRID@1
+   16     0.40      183.559        0.738        0.738              1      737.88      737.88    SETUP_TRANS@1
+   17     0.37      184.251        0.692        0.692             20       34.61       34.61    SPCM_SIMPLE_transfert1a@1
+   18     0.28      184.761        0.511       47.275             20       25.53     2363.77    SPCM_SIMPLE@1
+   19     0.14      185.012        0.251        0.251             10       25.11       25.11    TRMTOL@1
+   20     0.02      185.058        0.045        0.045             40        1.13        1.13    VERINT_DGEMM_2@1
+   21     0.02      185.093        0.035      175.423              1       35.07   175423.14    SPCM@1
+   22     0.02      185.121        0.028        0.028             20        1.42        1.42    SPCSI_boucle2@1
+   23     0.01      185.143        0.022        0.022             20        1.12        1.12    SPCSI_mxmaop1@1
+   24     0.01      185.166        0.022        0.022             20        1.11        1.11    SPCSI_mxmaop2@1
+   25     0.01      185.188        0.022        0.022             20        1.10        1.10    SPCSI_boucle4@1
+   26     0.01      185.209        0.021        0.021             20        1.07        1.07    SPCSI_boucle1@1
+   27     0.01      185.227        0.018        0.018             20        0.90        0.90    VERINT_calcul@1
+   28     0.01      185.240        0.012        0.012             20        0.61        0.61    SIGAM_transpose1@1
+   29     0.01      185.251        0.012        0.012             20        0.60        0.60    SPCSI_boucle3@1
+   30     0.01      185.263        0.012        0.012             20        0.59        0.59    SIGAM_transpose2@1
+   31     0.01      185.275        0.012        0.012             20        0.58        0.58    SITNU_transpose1@1
+   32     0.01      185.286        0.011        0.011             20        0.55        0.55    SITNU_transpose2@1
+   33     0.00      185.289        0.003        0.003             20        0.16        0.17    SPCM_SIMPLE_transfert1b@1
+   34     0.00      185.292        0.002        0.245             20        0.11       12.25    SPCSI@1
+   35     0.00      185.292        0.001        0.001             20        0.04        0.04    SPCSI_transferts1@1
+   36     0.00      185.293        0.001        0.067             20        0.03        3.33    SIGAM_SP_OPENMP@1
+   37     0.00      185.294        0.000        0.000             20        0.02        0.02    SITNU_calcul1@1
+   38     0.00      185.294        0.000        0.064             40        0.01        1.59    VERINT@1
+   39     0.00      185.294        0.000        0.000             20        0.02        0.02    SIGAM_cond_lim@1
+   40     0.00      185.295        0.000        0.000             20        0.02        0.02    SITNU_cond_lim@1
+   41     0.00      185.295        0.000        0.000             20        0.02        0.02    SPCM_SIMPLE_transfert2b@1
+   42     0.00      185.295        0.000        0.000             20        0.01        0.01    SPCSI_transferts2@1
+   43     0.00      185.295        0.000        0.000             20        0.01        0.01    SITNU_transfert1@1
+   44     0.00      185.296        0.000        0.064             40        0.01        1.60    VERDISINT@1
+   45     0.00      185.296        0.000        0.000             20        0.01        0.01    SITNU_transfert2@1
+   46     0.00      185.296        0.000        0.046             20        0.01        2.32    SITNU_SP_OPENMP@1
+   47     0.00      185.296        0.000        0.000             10        0.00        0.00    TRLTOG_BAR@1
